ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: recipe-rush-ingress
  namespace: recipe-rush
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: recipe-rush.local  # 로컬용 /etc/hosts 설정
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-external
            port:
              number: 80
